# chess-game

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  chess  cmake_install.cmake
header/: Board.hpp  DrawBoard.hpp  Game.hpp  MainMenu.hpp  Menu.hpp  MenuDisplay.hpp  Piece.hpp  Player.hpp  Square.hpp  StartMenu.hpp  SurrenderMenu.hpp
src/: Board.cpp  DrawBoard.cpp  Game.cpp  MainMenu.cpp  Menu.cpp  MenuDisplay.cpp  Piece.cpp  Player.cpp  Square.cpp  StartMenu.cpp  SurrenderMenu.cpp  main.cpp
tests/: MenuTest.cpp  testPieces.cpp  testPlayer.cpp
text/: Checkmate.txt  ChessText.txt
